bundled_metadata/force-app/main/default/objects/Order/fields/Cust_ID__c.field-meta.xml
<CustomField>
    <fullName>Cust_ID__c</fullName>
    <label>Customer Ext Id</label>
    <length>40</length>
    <type>Text</type>
</CustomField>