bundled_metadata/force-app/main/default/objects/Order/fields/EUSFA_Delivery_Date__c.field-meta.xml
<CustomField>
    <fullName>EUSFA_Delivery_Date__c</fullName>
    <label>Delivery Date</label>
    <type>DateTime</type>
</CustomField>