bundled_metadata/force-app/main/default/objects/Order/fields/EUSFA_Total_Net_Value__c.field-meta.xml
<CustomField>
    <fullName>EUSFA_Total_Net_Value__c</fullName>
    <label>Total Net Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>