bundled_metadata/force-app/main/default/objects/Order/fields/External_Id__c.field-meta.xml
<CustomField>
    <fullName>External_Id__c</fullName>
    <description
    >External identifier used as the alternate upsert key when Order Number is not available. Populated by the Order Confirmation upload (ADO 158478) and read by the Order Item Confirmation upload (ADO 212013).</description>
    <externalId>true</externalId>
    <label>External Id</label>
    <length>40</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>