bundled_metadata/force-app/main/default/objects/Order/fields/First_Order__c.field-meta.xml
<CustomField>
    <fullName>First_Order__c</fullName>
    <defaultValue>false</defaultValue>
    <label>First Order</label>
    <type>Checkbox</type>
</CustomField>