bundled_metadata/force-app/main/default/objects/Order/fields/Line_Discount__c.field-meta.xml
<CustomField>
    <fullName>Line_Discount__c</fullName>
    <label>Line Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>