bundled_metadata/force-app/main/default/objects/Order/fields/Non_Sellable_Return_Reason__c.field-meta.xml
<CustomField>
    <fullName>Non_Sellable_Return_Reason__c</fullName>
    <label>Non-Sellable Return Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Quality reasons</fullName>
            </value>
            <value>
                <fullName>Expired product</fullName>
            </value>
            <value>
                <fullName>Return from customer, agreement with sales (stales)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>