bundled_metadata/force-app/main/default/objects/Order/fields/Purchase_Order_Type__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Order_Type__c</fullName>
    <description>Used to identify how this order was placed (telesales - TELE, digital - DIGI, handheld - HHC)</description>
    <label>Purchase Order Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>HHC</fullName>
            </value>
            <value>
                <fullName>TELE</fullName>
            </value>
            <value>
                <fullName>DIGI</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>