bundled_metadata/force-app/main/default/objects/Order/fields/Requested_Status__c.field-meta.xml
<CustomField>
    <fullName>Requested_Status__c</fullName>
    <description
    >ADO 220029 AC1 - backend-only field (not on any page layout). Holds the intended Order status (Delivered/Ordered/Unfulfilled) when an order cannot be activated at header-upload time because Salesforce requires at least one Order Product. The Order Item Confirmation upload applies this status once products exist, then clears it.</description>
    <inlineHelpText
    >Backend-only field used by the order upload to remember the intended status until the order has at least one product.</inlineHelpText>
    <label>Requested Status</label>
    <length>40</length>
    <type>Text</type>
</CustomField>