bundled_metadata/force-app/main/default/objects/Order/fields/Sellable_Return_Reason__c.field-meta.xml
<CustomField>
    <fullName>Sellable_Return_Reason__c</fullName>
    <label>Sellable Return Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Order entry error</fullName>
            </value>
            <value>
                <fullName>Order loading error</fullName>
            </value>
            <value>
                <fullName>Not delivered</fullName>
            </value>
            <value>
                <fullName>Not accepted BBE date</fullName>
            </value>
            <value>
                <fullName>Empties return</fullName>
            </value>
            <value>
                <fullName>Not received by customer</fullName>
            </value>
            <value>
                <fullName>Return from customer, agreement with sales (goods)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>