bundled_metadata/force-app/main/default/objects/Order/fields/Sum_of_Confirmed_Quantity_of_Order_Items__c.field-meta.xml
<CustomField>
    <fullName>Sum_of_Confirmed_Quantity_of_Order_Items__c</fullName>
    <label>Sum of Confirmed Quantity of Order Items</label>
    <summarizedField>OrderItem.Confirmed_Quantity__c</summarizedField>
    <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>