bundled_metadata/force-app/main/default/objects/Order/fields/Total_Net_Value__c.field-meta.xml
<CustomField>
    <fullName>Total_Net_Value__c</fullName>
    <label>Total Net Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>