bundled_metadata/force-app/main/default/objects/Order/fields/Total_Order_Items_Units__c.field-meta.xml
<CustomField>
    <fullName>Total_Order_Items_Units__c</fullName>
    <label>Total Order Items Units</label>
    <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>