bundled_metadata/force-app/main/default/objects/Order/fields/Total_Order_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Total_Order_Quantity__c</fullName>
    <description>Total number of items in the order</description>
    <label>Total Order Quantity</label>
    <summarizedField>OrderItem.Quantity</summarizedField>
    <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>