bundled_metadata/force-app/main/default/objects/Order/fields/Wholesaler_Id__c.field-meta.xml
<CustomField>
    <fullName>Wholesaler_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Wholesaler Account this Transfer Order is placed with. Populated when BDR selects a wholesaler during order creation.</description>
    <inlineHelpText>Select the Wholesaler this order is being placed with.</inlineHelpText>
    <label>Wholesaler</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Wholesaler</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Transfer Orders</relationshipLabel>
    <relationshipName>Transfer_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>