bundled_metadata/force-app/main/default/objects/Order/listViews/Cancelable_Orders.listView-meta.xml
<ListView>
    <fullName>Cancelable_Orders</fullName>
    <columns>ORDERS.ORDER_NUMBER</columns>
    <columns>CONTRACT.CONTRACT_NUMBER</columns>
    <columns>SALES.ACCOUNT.NAME</columns>
    <columns>ORDERS.EFFECTIVE_DATE</columns>
    <columns>ORDERS.TOTAL_AMOUNT</columns>
    <columns>ORDERS.STATUS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ORDERS.STATUS</field>
        <operation>notEqual</operation>
        <value>Sent,Canceled</value>
    </filters>
    <label>Cancelable Orders</label>
</ListView>