bundled_metadata/force-app/main/default/objects/Order/listViews/Canceled_Orders.listView-meta.xml
<ListView>
    <fullName>Canceled_Orders</fullName>
    <columns>ORDERS.ORDER_NUMBER</columns>
    <columns>CONTRACT.CONTRACT_NUMBER</columns>
    <columns>SALES.ACCOUNT.NAME</columns>
    <columns>ORDERS.EFFECTIVE_DATE</columns>
    <columns>ORDERS.TOTAL_AMOUNT</columns>
    <columns>ORDERS.STATUS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ORDERS.STATUS</field>
        <operation>equals</operation>
        <value>Canceled</value>
    </filters>
    <label>Canceled Orders</label>
</ListView>