bundled_metadata/force-app/main/default/objects/Order/listViews/Completed_Orders.listView-meta.xml
<ListView>
    <fullName>Completed_Orders</fullName>
    <columns>ORDERS.ORDER_NUMBER</columns>
    <columns>CONTRACT.CONTRACT_NUMBER</columns>
    <columns>SALES.ACCOUNT.NAME</columns>
    <columns>ORDERS.EFFECTIVE_DATE</columns>
    <columns>ORDERS.TOTAL_AMOUNT</columns>
    <columns>ORDERS.STATUS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ORDERS.STATUS</field>
        <operation>equals</operation>
        <value>Completed</value>
    </filters>
    <label>Completed Orders</label>
    <sharedTo>
        <role>Back_office</role>
    </sharedTo>
</ListView>