bundled_metadata/force-app/main/default/objects/Order/listViews/Pending_Status_View.listView-meta.xml
<ListView>
    <fullName>Pending_Status_View</fullName>
    <columns>ORDERS.ORDER_NUMBER</columns>
    <columns>CONTRACT.CONTRACT_NUMBER</columns>
    <columns>SALES.ACCOUNT.NAME</columns>
    <columns>ORDERS.EFFECTIVE_DATE</columns>
    <columns>ORDERS.TOTAL_AMOUNT</columns>
    <columns>ORDERS.STATUS</columns>
    <columns>ACTIVATEDBY_USER.ALIAS</columns>
    <columns>SALES.ACCOUNT.ACCOUNT_NUMBER</columns>
    <columns>ORDERS.TYPE</columns>
    <columns>Market__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ORDERS.STATUS</field>
        <operation>equals</operation>
        <value>Pending</value>
    </filters>
    <label>Pending Status View</label>
    <sharedTo>
        <role>Teleseller</role>
    </sharedTo>
</ListView>